--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body {
     font-size: 1.5em;
     font-weight: bold;
     color: white;
-    margin-left: 1.5em;
+    margin-left: 1.3em;
     margin-right: 1.5em;
 }
 .search-container {
@@ -38,6 +38,7 @@ body {
     border: none;
     box-sizing: border-box;
     outline: none;
+    height: 33.3px;
 }
 
 .search-icon {
@@ -231,7 +232,7 @@ body {
     height: 17vw;
     margin:0 auto;
     border-radius: 20px;
-    margin-bottom: 40px;
+    margin-bottom: 43px;
 }
 .title-text {
     padding:1vw 0 1vw 2vw ;
@@ -255,7 +256,8 @@ body {
 
 .name-text {
     color: white;
-    font-size: 1.14vw;
+    font-size: 1.3vw;
+    font-weight: 600;
 }
 .dashpoad-item {
     display: flex;
@@ -315,11 +317,11 @@ body {
     margin-right: 5px;
 }
 .title-course {
-    margin-bottom: 20px;
+    margin-bottom: 18px;
 }
 .title-courses {
-    margin-bottom: 10px;
-    margin-top: 20px;
+    margin-bottom: 18px;
+    margin-top: 36px;
 }
 
 .user-details {
@@ -456,7 +458,7 @@ body {
 .calendar-container {
     padding: 30px;
     width: 100%;
-    height: 90%;
+    height: 86%;
     background-color: white;
     border-radius: 10px;
   }
@@ -542,9 +544,14 @@ body {
     margin-bottom: 25px;
     font-size: 1.15vw;
 }
+.logo-fb {
+    width: 64px;
+    height: 30px;
+}
 .logo-fpt {
-    width: 6vw;
-    margin-bottom: 15px;
+    width: 90px;
+    height: 40px;
+    margin-bottom: 17px;
 }
 .cares {
     padding-top: 26px;
@@ -553,7 +560,7 @@ body {
     font-weight: 400;
     font-size: 15px;
     margin-bottom: 17px;
-    line-height: 20px;
+    line-height: 15px;
 }
 .describe {
     color: #000;
@@ -591,6 +598,13 @@ body {
     padding-top: 26px
 }
 @media (max-width: 972px) {
+    .date {
+        border-radius: 3px;
+    }
+    .search-container {
+        position: relative;
+        width: 31%;
+    }
     .cares1 {
         margin-right: 6vw;
         padding-top: 26px
