--- a/tablet.css
+++ b/tablet.css
@@ -10,47 +10,60 @@
         font-size: 1.90vw;
     }
     .contact-fb {
-        font-size: 3.14vw;
+        font-size: 4vw;
     }
     .search-container {
         position: relative;
         width: 40%;
     }
     .contact-tw {
-        font-size: 3.14vw;
+        font-size: 4vw;
     }
     .contact-yt {
-        font-size: 3.14vw;
+        font-size: 4vw;
     }
     .contact-gh {
-        font-size: 3.14vw;
+        font-size: 4vw;
     }
     .describe {
         font-size: 1.50vw;
     }
+    .logo {
+        margin-left: 6px;
+    }
     .logo-fpt {
-        width: 11vw;
+        width: 99px;
+        height: 40px;
     }
     .total-care {
         grid-template-columns: repeat(2, 1fr);
     }
     .text-hd {
-        font-size: 2.14vw;
+        font-size: 12px;
     }
     .legend-color {
-        width: 3vw;
-        height: 3vw;
+        width: 2.5vw;
+        height: 2.5vw;
 
     }
-    .calendar-header {
-        font-size: 2vw;
+    .legend {
+        margin-left: 15px;
+        margin-top: 20px;
     }
+    .calendar-header {
+        font-size: 12px;
+        color: #808080;
+    }
+   
     
     .date {
-        width: 6vw;
-        height: 3.5vw;
+        width: 5vw;
+        height: 2.5vw;
         border-radius: 5px;
-        font-size: 1.70vw;
+        font-size: 1.24vw;
+    }
+    .calendar-container {
+        padding: 40px;
     }
     .skill-list {
         /* width: 50%; */
@@ -83,11 +96,18 @@
     .img-user {
         height: 6.14vw;
     }
+    .title-courses {
+        margin-top: 38px;
+    }
+    .img-couser {
+        width: 3.3vw;
+    }
     .title-text {
         padding: 1vw 0 2vw 2vw;
     }
     .img-1 {
         width: 3.7vw;
+        margin-right: 12px;
     }
     .number {
         font-size: 1.74vw;
@@ -110,6 +130,7 @@
     .dashpoad {
         border-radius: 10px;
         height: 25vw;
+        width: 85.3%;
     }
     .text {
         font-size: 1.14vw;
@@ -117,23 +138,33 @@
     }
     .banner {
         border-radius: 10px;
+        width: 85.3%;
     }
     .text1 {
-        font-size: 1.44vw;
-        margin-top: 3vw;
+        font-size: 13px;
+        margin-top: 17px;
+        font-weight: 600;
     }
     .text2 {
-        font-size: 1.15vw;
+        font-size: 10px;
+        font-weight: 600;
+        margin-top: 8px;
     }
     .btn-couse {
         width: 100%;
         margin-top: 8px;
     }
     .banner {
-        height: 15vw;
+        height: 14.6vw;
+    }
+    .total-bag {
+        margin-top: 2vw;
     }
     .btn {
         padding: 5%;
+        font-size: 1.14vw;
+        font-weight: 600;
+        margin-top: 8px;
     }
     .wrap {
         display: block;
@@ -174,8 +205,9 @@
         font-size: 1.54vw;
     }
     .img-sales {
-        height: 15vw;
-    } 
+        height: 14.6vw;
+        width: 31.6vw;
+    }
     .header-mobile {
         display: none;
     }
