--- a/style.css
+++ b/style.css
@@ -171,7 +171,7 @@ body {
     height: 11vw;
     background-color: #8B00FF;
     border-radius: 20px;
-    margin: 16px auto;
+    margin: 13px auto;
     display: flex;
     justify-content: space-between;
 }
@@ -288,7 +288,8 @@ body {
 }
 .certification-text {
     color: white;
-    font-size: 0.84vw;
+    font-size: 10px;
+    font-weight: 600;
 }
 .progress-bar {
     width: 100%;
