--- a/tablet.css
+++ b/tablet.css
@@ -75,9 +75,9 @@
     font-size: 1.14vw;
     margin: 2vw 2vw;
 }
-    .course-star-icon {
+    /* .course-star-icon {
         font-size: 1.34vw;
-    }
+    } */
     .course-author {
         font-size: 1.10vw;
         margin: 1vw 2vw;
